--- a/src/main/resources/archetype-resources/context/pom.xml
+++ b/src/main/resources/archetype-resources/context/pom.xml
@@ -37,6 +37,16 @@
             <artifactId>zqkh-common</artifactId>
         </dependency>
         <dependency>
+            <groupId>${groupId}</groupId>
+            <artifactId>${artifactId}-event-dto</artifactId>
+            <version>${version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${groupId}</groupId>
+            <artifactId>${artifactId}-feign-interface</artifactId>
+            <version>${version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.jovezhao.nest</groupId>
             <artifactId>nest-starter</artifactId>
         </dependency>
