--- a/src/main/resources/archetype-resources/context/pom.xml
+++ b/src/main/resources/archetype-resources/context/pom.xml
@@ -31,6 +31,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.zqkh</groupId>
