--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.zqkh</groupId>
-    <artifactId>springcloud-provider-archetype</artifactId>
+    <artifactId>springcloud-archetype</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
 
-    <name>springcloud-provider-archetype</name>
+    <name>springcloud-archetype</name>
 
     <build>
         <extensions>
