--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,3 @@
-<<<<<<< HEAD
-# Lines that start with '#' are comments.
-*~
-*.diff
-*#
-.classpath
-.project
-.settings
-bin/flume-env.sh
-conf/flume-site.xml
-bin/.settings
-.eclipse
-pmd_report.html
-*/bin
-target
-patchprocess
-derby.log
-.idea
-*.iml
-nb-configuration.xml
-.DS_Store
-*/*.iml
-=======
 # Compiled class file
 *.class
 
@@ -43,4 +20,7 @@ nb-configuration.xml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
->>>>>>> 244309f9252fda70f85c7d81d983ce90b7265081
+
+.idea/
+target/
+*.iml
